--- a/inst/rmd/P2.Rmd
+++ b/inst/rmd/P2.Rmd
@@ -43,7 +43,8 @@ library(knitr)
 library(tidyverse)
 knitr::opts_chunk$set(echo = TRUE,
                 message = FALSE,
-                warning = FALSE)
+                warning = FALSE,
+                error = TRUE)
 startTime <- Sys.time()
 
 # supporting look up tables
